<resources>
    <string name="app_name">Tour Room</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Profile">Profile</string>
    <string name="menu_visited_places">Visited Places</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_home">Home</string>

    <string name="home_second">Home Second</string>
    <string name="feed">Feed</string>
    <string name="place">Place</string>
    <string name="group">Group</string>
    <string name="notification">Notification</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_counter_img">notification_counter_img</string>
    <string name="after_login">After Login</string>
    <string name="login_activity">Login</string>
    <string name="group_image">Group Image</string>
    <string name="invite_others">Invite Others</string>
    <string name="join_request">Join Request</string>
    <string name="edit_group_info">Edit Group Info</string>
    <string name="leave">Leave</string>
    <string name="chat">Chat</string>
    <string name="members">Members</string>
    <string name="poll">Poll</string>
    <string name="events">Events</string>
    <string name="announcements">Announcements</string>
    <string name="member_requests">Member Requests</string>
    <string name="use_as_a_popup_button">use as a popup button</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="search_title">search</string>
    <string name="reject">reject</string>
    <string name="join">join</string>
    <string name="this_image_is_for_invitation_row">this image is for invitation row</string>
    <string name="this_image_is_for_genaral_notification_row">This image is for genaral notification row</string>
    <string name="menu">Menu</string>
    <string name="security">Security</string>
    <string name="send_image">send image</string>
    <string name="upload_image">upload Image</string>
    <string name="write_here">write here....</string>
    <string name="type_old_password">Type old password</string>
    <string name="type_new_password">type new password</string>
    <string name="re_type_new_password">Re-type new password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="recommended_places_for_you">Recommended Places For You</string>
    <string name="tour_places">Tour Places</string>
    <string name="add_a_new_place">Add a new place</string>
    <string name="add_visited">ADD VISITED</string>
    <string name="create_a_new_group">Create A New Group</string>
    <string name="recommened_groups_for_you">Recommended Groups For You</string>
    <string name="your_groups">Your Groups</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="create">CREATE</string>
    <string name="add_poll_option">Add Poll Option</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="where_to_go">Where to go</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_day">Event Day</string>
    <string name="journey_start">Journey Start :</string>


    <string name="sundarban">The Sundarbans is a mangrove area in the delta formed by the confluence of the Ganges,
        Brahmaputra and Meghna Rivers in the Bay of Bengal. It spans from the Hooghly River in Indias
        state of West Bengal to the Baleswar River in Bangladesh. It comprises closed and open mangrove
        forests, agriculturally used land, mudflats and barren land, and is intersected by multiple tidal
        streams and channels.</string>
    <string name="enter_message">Enter Message :</string>
    <string name="highest_15_characters">highest 15 characters</string>
    <string name="create_a_event">Create An Event</string>
    <string name="event_image">event image</string>
    <string name="create_poll">Create A Poll</string>

    <string name="app_icon">App Icon</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="user_name">User Name</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already Have an Account</string>
    <string name="loading">Loading...</string>
    <string name="above99">99+</string>
    <string name="see_new_messages">See New Messages</string>
    <string name="using_as_placeholder_for_chat_image">Using as placeholder for chat image</string>
    <string name="edit">Edit</string>
    <string name="select_all">Select All</string>


    <string name="sendEmail">Send</string>
    <string name="important_notice_forgotten_password">We will email you a link after when you provide your valid sign up  email
    and click the send button,then check your email inbox and click the link to reset your password.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_for_place_info">Map</string>
    <string name="group_info">Group Info</string>
    <string name="search_here_case_sensitive">Search here (case sensitive)</string>


    <string-array name="searchOptions">

        <item>User</item>
        <item>Place</item>
        <item>Group</item>
    </string-array>


</resources>
