<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/menu_Profile" />
        <item
            android:id="@+id/nav_visited_places"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_visited_places" />
        <item
            android:id="@+id/about_fragment"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_logout" />
    </group>
</menu>
