<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForgottenPasswordFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/cantarell"
            android:text="@string/important_notice_forgotten_password"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp"
            android:layout_gravity="center"/>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edittext_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"

            android:layout_height="69dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edittext_forgotten_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email_vector_asset"
                android:drawableLeft="@drawable/email_vector_asset"
                android:drawablePadding="10dp"
                android:fontFamily="@font/cantarell"
                android:hint="@string/e_mail"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/sendEmail_forgotten_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/cantarell"
            android:text="@string/sendEmail"
            android:textStyle="bold"
            app:cornerRadius="13dp" />

    </LinearLayout>



</androidx.core.widget.NestedScrollView>