<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.group.create_group_fragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/groupnameinputedittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:padding="5dp"
            android:textSize="18sp"
            app:boxBackgroundColor="#F6F5F5"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_group_text_view_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/group_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/groupdescriptionedittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:textSize="18sp"
            app:boxBackgroundColor="#F6F5F5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupnameinputedittext">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/group_description"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/newgroupcreatebutton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="32dp"
            android:text="@string/create"
            app:cornerRadius="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uploadgroupphotoimageview"
            app:strokeColor="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/uploadgroupphotoimageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupdescriptionedittext"
            app:srcCompat="@drawable/ic_photo"
            android:focusable="true"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/create_group_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/fresca"
            android:text="@string/create_a_new_group"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>